--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </div>
     </div>
 
-    jehbfrje
+  <div class="mycontact">
+    
+  </div>
     <script src="app.js"></script>
 </body>
 </html>
